@@ -214,6 +214,7 @@ MANAGE_DEPENDENCY(BUILD_REQUIRES X11 REQUIRED
 # Building
 #
 
+#=== Compile flags
 IF(GSETTINGS_SUPPORT)
     ADD_DEFINITIONS(-DUSE_GSETTINGS)
 ENDIF()
@@ -221,6 +222,10 @@ IF(GCONF2_SUPPORT)
     ADD_DEFINITIONS(-DUSE_GCONF2)
 ENDIF()
 
+## Directory that store ibus-chewing icons
+SET_COMPILE_ENV(PRJ_ICON_DIR "${PRJ_DATA_DIR}/icons" CACHE STRING "PRJ_ICON_DIR")
+
+#=== GSettings/GConf schemas
 SET_COMPILE_ENV(PROJECT_SCHEMA_ID "org.freedesktop.IBus.Chewing" CACHE STRING "PROJECT_SCHEMA_ID")
 SET_COMPILE_ENV(PROJECT_SCHEMA_BASE "/desktop/ibus/engine" CACHE STRING "PROJECT_SCHEMA_BASE")
 SET_COMPILE_ENV(PROJECT_SCHEMA_SECTION "chewing" CACHE STRING "PROJECT_SCHEMA_SECTION")
@@ -231,21 +236,22 @@ SET_COMPILE_ENV(PROJECT_GCONF2_SCHEMA_DIR "${PROJECT_SCHEMA_BASE}/${PROJECT_GCON
     )
 SET_COMPILE_ENV(PROJECT_SCHEMA_PATH "${PROJECT_SCHEMA_DIR}/" CACHE STRING "PROJECT_SCHEMA_PATH")
 
-# Generate chewing.xml
+#=== chewing.xml
 SET(SYMBOL_XML "<symbol>&#x9177;</symbol>")
-IF(NOT GNOME_SHELL)
-    SET(SYMBOL_XML "<!-- ${SYMBOL_XML} -->")
-ENDIF(NOT GNOME_SHELL)
-
 SET_COMPILE_ENV(CHEWING_HOTKEYS "Super+space")
 SET(HOTKEYS_XML "<hotkeys>${CHEWING_HOTKEYS}</hotkeys>")
-IF(NOT GNOME_SHELL)
+SET(SETUP_PROGRAM_XML "<setup>${LIBEXEC_DIR}/ibus-setup-chewing</setup>")
+
+IF(IBUS_VERSION LESS 1.3.99)
+    SET(SYMBOL_XML "<!-- ${SYMBOL_XML} -->")
     SET(HOTKEYS_XML "<!-- ${HOTKEYS_XML} -->")
-ENDIF(NOT GNOME_SHELL)
+    SET(SETUP_PROGRAM_XML "<!-- ${SETUP_PROGRAM_XML} -->")
+ENDIF()
 
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/data/chewing.xml.in ${CMAKE_BINARY_DIR}/data/chewing.xml)
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/data/ibus-setup-chewing.desktop.in ${CMAKE_BINARY_DIR}/data/ibus-setup-chewing.desktop)
-# Sub directories
+
+#=== Sub directories
 ADD_SUBDIRECTORY(src bin)
 ADD_SUBDIRECTORY(po)
 ADD_SUBDIRECTORY(test test-bin)
