@@ -53,6 +53,7 @@ ENDFOREACH(_d ${IBUS_CHEWING_DEPENDENCIES})
 SET(IBUS_CHEWING_ENGINE_SOURCE_INCLUDED_C_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingEngine-signal.c
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingEngine-input-events.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingEngine-gui.c
     )
 
 SET(GOB2_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}")
@@ -120,12 +121,11 @@ SET(COMMON_SOURCE_FILES
 SET(IBUS_CHEWING_SOURCE_TO_TRANSLATE
     ${COMMON_SOURCE_C_FILES}
     ${IBUS_CHEWING_ENGINE_SOURCE_INCLUDED_C_FILES}
-    ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingEngine-signal.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingEngine-input-events.c
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingEngine.gob 
     ${CMAKE_CURRENT_SOURCE_DIR}/MakerDialog.gob 
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingPreEdit.c
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingUtil.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingSystray.c
     ${CMAKE_CURRENT_SOURCE_DIR}/MakerDialogWidget.c
     ${CMAKE_CURRENT_SOURCE_DIR}/ibus-setup-chewing.c
     ${CMAKE_CURRENT_SOURCE_DIR}/generate-gconf-schemas.c
@@ -315,6 +315,8 @@ ADD_EXECUTABLE(${IBUS_ENGINE_CHEWING}
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingLookupTable.h
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingPreEdit.c
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingPreEdit.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingSystray.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingSystray.h
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingUtil.c
     ${CMAKE_CURRENT_SOURCE_DIR}/IBusChewingUtil.h
     ${CMAKE_CURRENT_SOURCE_DIR}/main.c
